# aoc2021

./: .gitignore  CMakeLists.txt  DayProject.cmake  descriptions.md
day01/: CMakeLists.txt  day01.cpp
day02/: CMakeLists.txt  day02.cpp
day03/: CMakeLists.txt  day03.cpp
day04/: CMakeLists.txt  day04.cpp  input.txt
day05/: CMakeLists.txt  day05.cpp
day06/: CMakeLists.txt  day06.cpp
day07/: CMakeLists.txt  day07.cpp
day08/: CMakeLists.txt  day08.cpp
day09/: CMakeLists.txt  day09.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp  day12_fast.cpp
day13/: day13.cpp  difficult3.txt  input.txt
day14/: day14.cpp
day15/: day15.cpp
day16/: day16.cpp  test.txt
day17/: day17.cpp  test.txt
day18/: day18.cpp  input.txt
day19/: day19.cpp
day20/: day20.cpp
day21/: day21.cpp
day22/: day22.cpp  input.out  test.out  test2.txt
day23/: day23.cpp  day23.py  input.txt  input2.txt  test2.txt
day24/: day24.cpp
day25/: day25.cpp
utils/: CMakeLists.txt  brainfuck.cpp  brainfuck.h  conway.h  primes.txt  range.h  utils.cpp  utils.h  utils.py
