cmake_minimum_required(VERSION 3.10)

project("aoc2021")

add_subdirectory(day01) # [binary_dir] [EXCLUDE_FROM_ALL])
add_subdirectory(day02) 
add_subdirectory(day03) 
add_subdirectory(day04) 
add_subdirectory(day05) 
add_subdirectory(day06) 
add_subdirectory(day07) 
add_subdirectory(day08) 
add_subdirectory(day09) 
add_subdirectory(day10) 
